Improve error checking

--- a/examples/fluid_simulation.ipynb
+++ b/examples/fluid_simulation.ipynb
@@ -2,20 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
-      "TensorProgram:\n",
-      "  Kernel count: 47\n",
-      "  Intermediate buffers: 56\n",
-      "  Lines of generated code: 997\n",
-      "  IR size: 5344\n",
-      "\n"
+      "Requirement already satisfied: imageio in c:\\users\\micha\\anaconda3\\envs\\p312\\lib\\site-packages (2.33.1)\n",
+      "Requirement already satisfied: numpy in c:\\users\\micha\\anaconda3\\envs\\p312\\lib\\site-packages (from imageio) (1.26.2)\n",
+      "Requirement already satisfied: pillow>=8.3.2 in c:\\users\\micha\\anaconda3\\envs\\p312\\lib\\site-packages (from imageio) (10.1.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting opencv-python\n",
+      "  Obtaining dependency information for opencv-python from https://files.pythonhosted.org/packages/38/d2/3e8c13ffc37ca5ebc6f382b242b44acb43eb489042e1728407ac3904e72f/opencv_python-4.8.1.78-cp37-abi3-win_amd64.whl.metadata\n",
+      "  Using cached opencv_python-4.8.1.78-cp37-abi3-win_amd64.whl.metadata (20 kB)\n",
+      "Requirement already satisfied: numpy>=1.21.2 in c:\\users\\micha\\anaconda3\\envs\\p312\\lib\\site-packages (from opencv-python) (1.26.2)\n",
+      "Using cached opencv_python-4.8.1.78-cp37-abi3-win_amd64.whl (38.1 MB)\n",
+      "Installing collected packages: opencv-python\n",
+      "Successfully installed opencv-python-4.8.1.78\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install imageio\n",
+    "%pip install opencv-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Input types int, float, are not valid for operation add",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 240\u001b[0m\n\u001b[0;32m    235\u001b[0m     canvas[i, j, \u001b[39m2\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m255.0\u001b[39m \u001b[39m*\u001b[39m (\u001b[39m0.334\u001b[39m \u001b[39m+\u001b[39m mag \u001b[39m*\u001b[39m (\u001b[39m1.384\u001b[39m \u001b[39m+\u001b[39m mag \u001b[39m*\u001b[39m (\u001b[39m0.095\u001b[39m \u001b[39m+\u001b[39m mag \u001b[39m*\u001b[39m (\u001b[39m-\u001b[39m\u001b[39m19.332\u001b[39m \u001b[39m+\u001b[39m mag \u001b[39m*\u001b[39m (\u001b[39m56.690\u001b[39m \u001b[39m+\u001b[39m mag \u001b[39m*\u001b[39m (\u001b[39m-\u001b[39m\u001b[39m65.353\u001b[39m \u001b[39m+\u001b[39m \u001b[39m26.312\u001b[39m \u001b[39m*\u001b[39m mag))))))\n\u001b[0;32m    237\u001b[0m     \u001b[39mreturn\u001b[39;00m [vx, vy, pressure, canvas, div, density, Residual(pressure, div)]\n\u001b[1;32m--> 240\u001b[0m fluid \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39;49mcompile(FluidTest)\n",
+      "Cell \u001b[1;32mIn[3], line 180\u001b[0m, in \u001b[0;36mFluidTest\u001b[1;34m()\u001b[0m\n\u001b[0;32m    177\u001b[0m i,j \u001b[39m=\u001b[39m vx\u001b[39m.\u001b[39mindices\n\u001b[0;32m    178\u001b[0m x, y \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mfloat(i), tf\u001b[39m.\u001b[39mfloat(j)\n\u001b[1;32m--> 180\u001b[0m vx, vy, pressure, density \u001b[39m=\u001b[39m SemiLagrange(vx, vy, pressure, density, dt)\n\u001b[0;32m    182\u001b[0m \u001b[39m# add source\u001b[39;00m\n\u001b[0;32m    183\u001b[0m source \u001b[39m=\u001b[39m \u001b[39m0.16\u001b[39m\u001b[39m*\u001b[39mtf\u001b[39m.\u001b[39mexp(\u001b[39m-\u001b[39m((y\u001b[39m-\u001b[39mM\u001b[39m/\u001b[39m\u001b[39m5.0\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2.0\u001b[39m \u001b[39m+\u001b[39m (x\u001b[39m-\u001b[39m\u001b[39m2.0\u001b[39m\u001b[39m*\u001b[39mN\u001b[39m/\u001b[39m\u001b[39m3.0\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2.0\u001b[39m)\u001b[39m/\u001b[39m\u001b[39m100.0\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[3], line 70\u001b[0m, in \u001b[0;36mSemiLagrange\u001b[1;34m(vx, vy, pressure, density, dt)\u001b[0m\n\u001b[0;32m     67\u001b[0m x1, y1 \u001b[39m=\u001b[39m RK4Advection(vx, vy, dt)\n\u001b[0;32m     68\u001b[0m \u001b[39m#x1, y1 = EulerAdvection(vx, vy, dt)\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m vx \u001b[39m=\u001b[39m CubicInterp(vx, x1, y1)\n\u001b[0;32m     71\u001b[0m vy \u001b[39m=\u001b[39m CubicInterp(vy, x1, y1)\n\u001b[0;32m     72\u001b[0m \u001b[39m#pressure = CubicInterp(pressure, x1, y1)\u001b[39;00m\n\u001b[0;32m     73\u001b[0m \u001b[39m#vx = Bilinear(vx, x1, y1)\u001b[39;00m\n\u001b[0;32m     74\u001b[0m \u001b[39m#vy = Bilinear(vy, x1, y1)\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[39m#dens3 = tf.min(dens1, dens2)\u001b[39;00m\n\u001b[0;32m     80\u001b[0m \u001b[39m#dens4 = tf.max(dens1, dens2)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[3], line 40\u001b[0m, in \u001b[0;36mCubicInterp\u001b[1;34m(tex, x, y)\u001b[0m\n\u001b[0;32m     38\u001b[0m     valueX \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     39\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m):\n\u001b[1;32m---> 40\u001b[0m         valueX \u001b[39m=\u001b[39m valueX \u001b[39m+\u001b[39;49m tex[xi \u001b[39m+\u001b[39;49m \u001b[39mint\u001b[39;49m(i), yi \u001b[39m+\u001b[39;49m \u001b[39mint\u001b[39;49m(j)] \u001b[39m*\u001b[39;49m wx[i \u001b[39m+\u001b[39;49m \u001b[39m1\u001b[39;49m]\n\u001b[0;32m     41\u001b[0m     valueY \u001b[39m=\u001b[39m valueY \u001b[39m+\u001b[39m valueX \u001b[39m*\u001b[39m wy[j \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m]\n\u001b[0;32m     42\u001b[0m \u001b[39mreturn\u001b[39;00m valueY\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Input types int, float, are not valid for operation add"
      ]
     }
    ],
