Add multiple op types, remove unused code

--- a/examples/mandelbrot.ipynb
+++ b/examples/mandelbrot.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "TensorProgram:\n",
-      "  Kernel count: 2\n",
-      "  Intermediate buffers: 1\n",
-      "  Lines of generated code: 195\n",
-      "  IR size: 555\n",
+      "  Kernel count: 4\n",
+      "  Intermediate buffers: 3\n",
+      "  Lines of generated code: 217\n",
+      "  IR size: 590\n",
       "\n",
       "(2048, 2048, 3)\n"
      ]
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
