--- a/examples/matrix_mul.ipynb
+++ b/examples/matrix_mul.ipynb
@@ -13,11 +13,16 @@
      ]
     },
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "RuntimeError",
+     "evalue": "Input types float, are not valid for operation set",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 41\u001b[0m\n\u001b[0;32m     37\u001b[0m     C[i, j] \u001b[39m=\u001b[39m s\n\u001b[0;32m     39\u001b[0m     \u001b[39mreturn\u001b[39;00m [C]\n\u001b[1;32m---> 41\u001b[0m mmul \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39;49mcompile(matmul)\n",
+      "Cell \u001b[1;32mIn[1], line 35\u001b[0m, in \u001b[0;36mmatmul\u001b[1;34m()\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mloop_body\u001b[39m(k):\n\u001b[0;32m     33\u001b[0m     s\u001b[39m.\u001b[39mset(s \u001b[39m+\u001b[39m A[i, k] \u001b[39m*\u001b[39m Bt[j, k])\n\u001b[1;32m---> 35\u001b[0m tf\u001b[39m.\u001b[39;49mloop(loop_body, \u001b[39m0\u001b[39;49m, M, \u001b[39m1\u001b[39;49m)\n\u001b[0;32m     37\u001b[0m C[i, j] \u001b[39m=\u001b[39m s\n\u001b[0;32m     39\u001b[0m \u001b[39mreturn\u001b[39;00m [C]\n",
+      "Cell \u001b[1;32mIn[1], line 33\u001b[0m, in \u001b[0;36mmatmul.<locals>.loop_body\u001b[1;34m(k)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mloop_body\u001b[39m(k):\n\u001b[1;32m---> 33\u001b[0m     s\u001b[39m.\u001b[39;49mset(s \u001b[39m+\u001b[39;49m A[i, k] \u001b[39m*\u001b[39;49m Bt[j, k])\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Input types float, are not valid for operation set"
      ]
     }
    ],
