--- a/examples/wave_simulation.ipynb
+++ b/examples/wave_simulation.ipynb
@@ -14,7 +14,7 @@
       "  Kernel count: 1\n",
       "  Intermediate buffers: 4\n",
       "  Lines of generated code: 121\n",
-      "  IR size: 144\n",
+      "  IR size: 146\n",
       "\n"
      ]
     }
@@ -69,95 +69,97 @@
       "[m0,m1] float m4 = memory(memory_type=output, )\n",
       "[m0,m1] float m5 = memory(memory_type=output, )\n",
       "\n",
-      "[m0,m1] int v4_0 = dim_id(data=[0], )\n",
-      "[m0,m1] int v4_1 = dim_id(data=[1], )\n",
-      "[m0,m1] int v4_3 = sub(inputs=[v4_0,v4_2(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_5 = add(inputs=[v4_0,v4_4(1)], cost=1.000000)\n",
-      "[] int v4_7 = sub(inputs=[m0,v4_6(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_9 = clamp(inputs=[v4_3,v4_8(0),v4_7], cost=6.000000)\n",
-      "[m0,m1] int v4_10 = mul(inputs=[v4_9,m1], cost=7.000000)\n",
-      "[] int v4_12 = sub(inputs=[m1,v4_11(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_14 = clamp(inputs=[v4_1,v4_13(0),v4_12], cost=5.000000)\n",
-      "[m0,m1] int v4_15 = add(inputs=[v4_10,v4_14], cost=13.000000)\n",
-      "[m0,m1] float v4_16 = load(memory=[m2], indices=[v4_15], cost=141.000000)\n",
-      "[] int v4_18 = sub(inputs=[m0,v4_17(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_20 = clamp(inputs=[v4_5,v4_19(0),v4_18], cost=6.000000)\n",
-      "[m0,m1] int v4_21 = mul(inputs=[v4_20,m1], cost=7.000000)\n",
-      "[] int v4_23 = sub(inputs=[m1,v4_22(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_25 = clamp(inputs=[v4_1,v4_24(0),v4_23], cost=5.000000)\n",
-      "[m0,m1] int v4_26 = add(inputs=[v4_21,v4_25], cost=13.000000)\n",
-      "[m0,m1] float v4_27 = load(memory=[m2], indices=[v4_26], cost=141.000000)\n",
-      "[m0,m1] float v4_28 = add(inputs=[v4_16,v4_27], cost=283.000000)\n",
-      "[m0,m1] int v4_30 = sub(inputs=[v4_1,v4_29(1)], cost=1.000000)\n",
-      "[] int v4_32 = sub(inputs=[m0,v4_31(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_34 = clamp(inputs=[v4_0,v4_33(0),v4_32], cost=5.000000)\n",
-      "[m0,m1] int v4_35 = mul(inputs=[v4_34,m1], cost=6.000000)\n",
-      "[] int v4_37 = sub(inputs=[m1,v4_36(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_39 = clamp(inputs=[v4_30,v4_38(0),v4_37], cost=6.000000)\n",
-      "[m0,m1] int v4_40 = add(inputs=[v4_35,v4_39], cost=13.000000)\n",
-      "[m0,m1] float v4_41 = load(memory=[m2], indices=[v4_40], cost=141.000000)\n",
-      "[m0,m1] float v4_42 = add(inputs=[v4_28,v4_41], cost=425.000000)\n",
-      "[m0,m1] int v4_44 = add(inputs=[v4_1,v4_43(1)], cost=1.000000)\n",
-      "[] int v4_46 = sub(inputs=[m0,v4_45(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_48 = clamp(inputs=[v4_0,v4_47(0),v4_46], cost=5.000000)\n",
-      "[m0,m1] int v4_49 = mul(inputs=[v4_48,m1], cost=6.000000)\n",
-      "[] int v4_51 = sub(inputs=[m1,v4_50(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_53 = clamp(inputs=[v4_44,v4_52(0),v4_51], cost=6.000000)\n",
-      "[m0,m1] int v4_54 = add(inputs=[v4_49,v4_53], cost=13.000000)\n",
-      "[m0,m1] float v4_55 = load(memory=[m2], indices=[v4_54], cost=141.000000)\n",
-      "[m0,m1] float v4_56 = add(inputs=[v4_42,v4_55], cost=567.000000)\n",
-      "[] int v4_59 = sub(inputs=[m0,v4_58(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_61 = clamp(inputs=[v4_0,v4_60(0),v4_59], cost=5.000000)\n",
-      "[m0,m1] int v4_62 = mul(inputs=[v4_61,m1], cost=6.000000)\n",
-      "[] int v4_64 = sub(inputs=[m1,v4_63(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_66 = clamp(inputs=[v4_1,v4_65(0),v4_64], cost=5.000000)\n",
-      "[m0,m1] int v4_67 = add(inputs=[v4_62,v4_66], cost=12.000000)\n",
-      "[m0,m1] float v4_68 = load(memory=[m2], indices=[v4_67], cost=140.000000)\n",
-      "[m0,m1] float v4_69 = mul(inputs=[v4_57(4.000000f),v4_68], cost=141.000000)\n",
-      "[m0,m1] float v4_70 = sub(inputs=[v4_56,v4_69], cost=709.000000)\n",
-      "[] int v4_73 = sub(inputs=[m0,v4_72(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_75 = clamp(inputs=[v4_0,v4_74(0),v4_73], cost=5.000000)\n",
-      "[m0,m1] int v4_76 = mul(inputs=[v4_75,m1], cost=6.000000)\n",
-      "[] int v4_78 = sub(inputs=[m1,v4_77(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_80 = clamp(inputs=[v4_1,v4_79(0),v4_78], cost=5.000000)\n",
-      "[m0,m1] int v4_81 = add(inputs=[v4_76,v4_80], cost=12.000000)\n",
-      "[] float v4_82 = load(memory=[m2], indices=[v4_81], cost=140.000000)\n",
-      "[m0,m1] float v4_83 = mul(inputs=[v4_71(6.283185f),v4_82], cost=141.000000)\n",
-      "[m0,m1] float v4_84 = sin(inputs=[v4_83], cost=143.000000)\n",
-      "[m0,m1] float v4_86 = mul(inputs=[v4_85(0.100000f),v4_84], cost=144.000000)\n",
-      "[m0,m1] float v4_87 = sub(inputs=[v4_70,v4_86], cost=854.000000)\n",
-      "[m0,m1] float v4_89 = mul(inputs=[v4_88(0.200000f),v4_87], cost=855.000000)\n",
-      "[] int v4_91 = sub(inputs=[m0,v4_90(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_93 = clamp(inputs=[v4_0,v4_92(0),v4_91], cost=5.000000)\n",
-      "[m0,m1] int v4_94 = mul(inputs=[v4_93,m1], cost=6.000000)\n",
-      "[] int v4_96 = sub(inputs=[m1,v4_95(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_98 = clamp(inputs=[v4_1,v4_97(0),v4_96], cost=5.000000)\n",
-      "[m0,m1] int v4_99 = add(inputs=[v4_94,v4_98], cost=12.000000)\n",
-      "[] float v4_100 = load(memory=[m3], indices=[v4_99], cost=140.000000)\n",
-      "[m0,m1] float v4_101 = add(inputs=[v4_100,v4_89], cost=996.000000)\n",
-      "[] int v4_103 = sub(inputs=[m0,v4_102(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_105 = clamp(inputs=[v4_0,v4_104(0),v4_103], cost=5.000000)\n",
-      "[m0,m1] int v4_106 = mul(inputs=[v4_105,m1], cost=6.000000)\n",
-      "[] int v4_108 = sub(inputs=[m1,v4_107(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_110 = clamp(inputs=[v4_1,v4_109(0),v4_108], cost=5.000000)\n",
-      "[m0,m1] int v4_111 = add(inputs=[v4_106,v4_110], cost=12.000000)\n",
-      "[m0,m1] store(memory=[m4], inputs=[v4_101], indices=[v4_111], cost=1136.000000)\n",
-      "[m0,m1] float v4_114 = mul(inputs=[v4_113(0.200000f),v4_101], cost=997.000000)\n",
-      "[] int v4_116 = sub(inputs=[m0,v4_115(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_118 = clamp(inputs=[v4_0,v4_117(0),v4_116], cost=5.000000)\n",
-      "[m0,m1] int v4_119 = mul(inputs=[v4_118,m1], cost=6.000000)\n",
-      "[] int v4_121 = sub(inputs=[m1,v4_120(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_123 = clamp(inputs=[v4_1,v4_122(0),v4_121], cost=5.000000)\n",
-      "[m0,m1] int v4_124 = add(inputs=[v4_119,v4_123], cost=12.000000)\n",
-      "[] float v4_125 = load(memory=[m2], indices=[v4_124], cost=140.000000)\n",
-      "[m0,m1] float v4_126 = add(inputs=[v4_125,v4_114], cost=1138.000000)\n",
-      "[] int v4_128 = sub(inputs=[m0,v4_127(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_130 = clamp(inputs=[v4_0,v4_129(0),v4_128], cost=5.000000)\n",
-      "[m0,m1] int v4_131 = mul(inputs=[v4_130,m1], cost=6.000000)\n",
-      "[] int v4_133 = sub(inputs=[m1,v4_132(1)], cost=1.000000)\n",
-      "[m0,m1] int v4_135 = clamp(inputs=[v4_1,v4_134(0),v4_133], cost=5.000000)\n",
-      "[m0,m1] int v4_136 = add(inputs=[v4_131,v4_135], cost=12.000000)\n",
-      "[m0,m1] store(memory=[m5], inputs=[v4_126], indices=[v4_136], cost=1278.000000)\n",
+      "[m0,m1] int v4_0 = dim_id(data=[0], cost=0.000000)\n",
+      "[m0,m1] int v4_1 = dim_id(data=[1], cost=0.000000)\n",
+      "[m0,m1] int v4_2 = dim_id(data=[0], cost=0.000000)\n",
+      "[m0,m1] int v4_3 = dim_id(data=[1], cost=0.000000)\n",
+      "[m0,m1] int v4_5 = sub(inputs=[v4_2,v4_4(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_7 = add(inputs=[v4_2,v4_6(1)], cost=1.000000)\n",
+      "[] int v4_9 = sub(inputs=[m0,v4_8(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_11 = clamp(inputs=[v4_5,v4_10(0),v4_9], cost=7.000000)\n",
+      "[m0,m1] int v4_12 = mul(inputs=[v4_11,m1], cost=9.000000)\n",
+      "[] int v4_14 = sub(inputs=[m1,v4_13(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_16 = clamp(inputs=[v4_3,v4_15(0),v4_14], cost=6.000000)\n",
+      "[m0,m1] int v4_17 = add(inputs=[v4_12,v4_16], cost=16.000000)\n",
+      "[m0,m1] float v4_18 = load(memory=[m2], indices=[v4_17], cost=144.000000)\n",
+      "[] int v4_20 = sub(inputs=[m0,v4_19(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_22 = clamp(inputs=[v4_7,v4_21(0),v4_20], cost=7.000000)\n",
+      "[m0,m1] int v4_23 = mul(inputs=[v4_22,m1], cost=9.000000)\n",
+      "[] int v4_25 = sub(inputs=[m1,v4_24(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_27 = clamp(inputs=[v4_3,v4_26(0),v4_25], cost=6.000000)\n",
+      "[m0,m1] int v4_28 = add(inputs=[v4_23,v4_27], cost=16.000000)\n",
+      "[m0,m1] float v4_29 = load(memory=[m2], indices=[v4_28], cost=144.000000)\n",
+      "[m0,m1] float v4_30 = add(inputs=[v4_18,v4_29], cost=289.000000)\n",
+      "[m0,m1] int v4_32 = sub(inputs=[v4_3,v4_31(1)], cost=1.000000)\n",
+      "[] int v4_34 = sub(inputs=[m0,v4_33(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_36 = clamp(inputs=[v4_2,v4_35(0),v4_34], cost=6.000000)\n",
+      "[m0,m1] int v4_37 = mul(inputs=[v4_36,m1], cost=8.000000)\n",
+      "[] int v4_39 = sub(inputs=[m1,v4_38(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_41 = clamp(inputs=[v4_32,v4_40(0),v4_39], cost=7.000000)\n",
+      "[m0,m1] int v4_42 = add(inputs=[v4_37,v4_41], cost=16.000000)\n",
+      "[m0,m1] float v4_43 = load(memory=[m2], indices=[v4_42], cost=144.000000)\n",
+      "[m0,m1] float v4_44 = add(inputs=[v4_30,v4_43], cost=434.000000)\n",
+      "[m0,m1] int v4_46 = add(inputs=[v4_3,v4_45(1)], cost=1.000000)\n",
+      "[] int v4_48 = sub(inputs=[m0,v4_47(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_50 = clamp(inputs=[v4_2,v4_49(0),v4_48], cost=6.000000)\n",
+      "[m0,m1] int v4_51 = mul(inputs=[v4_50,m1], cost=8.000000)\n",
+      "[] int v4_53 = sub(inputs=[m1,v4_52(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_55 = clamp(inputs=[v4_46,v4_54(0),v4_53], cost=7.000000)\n",
+      "[m0,m1] int v4_56 = add(inputs=[v4_51,v4_55], cost=16.000000)\n",
+      "[m0,m1] float v4_57 = load(memory=[m2], indices=[v4_56], cost=144.000000)\n",
+      "[m0,m1] float v4_58 = add(inputs=[v4_44,v4_57], cost=579.000000)\n",
+      "[] int v4_61 = sub(inputs=[m0,v4_60(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_63 = clamp(inputs=[v4_2,v4_62(0),v4_61], cost=6.000000)\n",
+      "[m0,m1] int v4_64 = mul(inputs=[v4_63,m1], cost=8.000000)\n",
+      "[] int v4_66 = sub(inputs=[m1,v4_65(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_68 = clamp(inputs=[v4_3,v4_67(0),v4_66], cost=6.000000)\n",
+      "[m0,m1] int v4_69 = add(inputs=[v4_64,v4_68], cost=15.000000)\n",
+      "[m0,m1] float v4_70 = load(memory=[m2], indices=[v4_69], cost=143.000000)\n",
+      "[m0,m1] float v4_71 = mul(inputs=[v4_59(4.000000f),v4_70], cost=144.000000)\n",
+      "[m0,m1] float v4_72 = sub(inputs=[v4_58,v4_71], cost=724.000000)\n",
+      "[] int v4_75 = sub(inputs=[m0,v4_74(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_77 = clamp(inputs=[v4_0,v4_76(0),v4_75], cost=6.000000)\n",
+      "[m0,m1] int v4_78 = mul(inputs=[v4_77,m1], cost=8.000000)\n",
+      "[] int v4_80 = sub(inputs=[m1,v4_79(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_82 = clamp(inputs=[v4_1,v4_81(0),v4_80], cost=6.000000)\n",
+      "[m0,m1] int v4_83 = add(inputs=[v4_78,v4_82], cost=15.000000)\n",
+      "[] float v4_84 = load(memory=[m2], indices=[v4_83], cost=143.000000)\n",
+      "[m0,m1] float v4_85 = mul(inputs=[v4_73(6.283185f),v4_84], cost=144.000000)\n",
+      "[m0,m1] float v4_86 = sin(inputs=[v4_85], cost=146.000000)\n",
+      "[m0,m1] float v4_88 = mul(inputs=[v4_87(0.100000f),v4_86], cost=147.000000)\n",
+      "[m0,m1] float v4_89 = sub(inputs=[v4_72,v4_88], cost=872.000000)\n",
+      "[m0,m1] float v4_91 = mul(inputs=[v4_90(0.200000f),v4_89], cost=873.000000)\n",
+      "[] int v4_93 = sub(inputs=[m0,v4_92(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_95 = clamp(inputs=[v4_0,v4_94(0),v4_93], cost=6.000000)\n",
+      "[m0,m1] int v4_96 = mul(inputs=[v4_95,m1], cost=8.000000)\n",
+      "[] int v4_98 = sub(inputs=[m1,v4_97(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_100 = clamp(inputs=[v4_1,v4_99(0),v4_98], cost=6.000000)\n",
+      "[m0,m1] int v4_101 = add(inputs=[v4_96,v4_100], cost=15.000000)\n",
+      "[] float v4_102 = load(memory=[m3], indices=[v4_101], cost=143.000000)\n",
+      "[m0,m1] float v4_103 = add(inputs=[v4_102,v4_91], cost=1017.000000)\n",
+      "[] int v4_105 = sub(inputs=[m0,v4_104(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_107 = clamp(inputs=[v4_0,v4_106(0),v4_105], cost=6.000000)\n",
+      "[m0,m1] int v4_108 = mul(inputs=[v4_107,m1], cost=8.000000)\n",
+      "[] int v4_110 = sub(inputs=[m1,v4_109(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_112 = clamp(inputs=[v4_1,v4_111(0),v4_110], cost=6.000000)\n",
+      "[m0,m1] int v4_113 = add(inputs=[v4_108,v4_112], cost=15.000000)\n",
+      "[m0,m1] store(memory=[m4], inputs=[v4_103], indices=[v4_113], cost=1160.000000)\n",
+      "[m0,m1] float v4_116 = mul(inputs=[v4_115(0.200000f),v4_103], cost=1018.000000)\n",
+      "[] int v4_118 = sub(inputs=[m0,v4_117(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_120 = clamp(inputs=[v4_0,v4_119(0),v4_118], cost=6.000000)\n",
+      "[m0,m1] int v4_121 = mul(inputs=[v4_120,m1], cost=8.000000)\n",
+      "[] int v4_123 = sub(inputs=[m1,v4_122(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_125 = clamp(inputs=[v4_1,v4_124(0),v4_123], cost=6.000000)\n",
+      "[m0,m1] int v4_126 = add(inputs=[v4_121,v4_125], cost=15.000000)\n",
+      "[] float v4_127 = load(memory=[m2], indices=[v4_126], cost=143.000000)\n",
+      "[m0,m1] float v4_128 = add(inputs=[v4_127,v4_116], cost=1162.000000)\n",
+      "[] int v4_130 = sub(inputs=[m0,v4_129(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_132 = clamp(inputs=[v4_0,v4_131(0),v4_130], cost=6.000000)\n",
+      "[m0,m1] int v4_133 = mul(inputs=[v4_132,m1], cost=8.000000)\n",
+      "[] int v4_135 = sub(inputs=[m1,v4_134(1)], cost=2.000000)\n",
+      "[m0,m1] int v4_137 = clamp(inputs=[v4_1,v4_136(0),v4_135], cost=6.000000)\n",
+      "[m0,m1] int v4_138 = add(inputs=[v4_133,v4_137], cost=15.000000)\n",
+      "[m0,m1] store(memory=[m5], inputs=[v4_128], indices=[v4_138], cost=1305.000000)\n",
       "\n"
      ]
     }
@@ -176,16 +178,16 @@
      "output_type": "stream",
      "text": [
       "Used memory: 262144\n",
-      "Iterations per second: 1086.9789669005982\n",
-      "Iterations per second: 7692.441999082989\n",
-      "Iterations per second: 8333.10949079133\n",
-      "Iterations per second: 6666.726006930095\n",
-      "Iterations per second: 6666.726006930095\n",
-      "Iterations per second: 8332.778384821695\n",
-      "Iterations per second: 6250.266742169106\n",
-      "Iterations per second: 9090.976873225394\n",
-      "Iterations per second: 5882.366800835869\n",
-      "Iterations per second: 7692.441999082989\n",
+      "Iterations per second: 1020.4175769636871\n",
+      "Iterations per second: 5882.2843038258725\n",
+      "Iterations per second: 6666.620042915044\n",
+      "Iterations per second: 6249.987334038654\n",
+      "Iterations per second: 6250.080467306431\n",
+      "Iterations per second: 5882.449300159883\n",
+      "Iterations per second: 5882.201809129794\n",
+      "Iterations per second: 5882.2843038258725\n",
+      "Iterations per second: 3571.4137311501095\n",
+      "Iterations per second: 4545.340659102485\n",
       "Used memory: 262146\n"
      ]
     }
