Some refactoring and bug fixes

--- a/examples/fluid_simulation.ipynb
+++ b/examples/fluid_simulation.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "TensorProgram:\n",
       "  Kernel count: 12\n",
       "  Intermediate buffers: 14\n",
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,19 +800,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 250, IPS: 125.18794739359318\n",
-      "Iteration: 500, IPS: 138.5041682968511\n",
-      "Iteration: 750, IPS: 136.31407711008583\n",
-      "Iteration: 1000, IPS: 137.13655561481505\n",
-      "Iteration: 1250, IPS: 136.98629779067633\n",
-      "Iteration: 1500, IPS: 136.38845611653662\n",
+      "Iteration: 250, IPS: 81.83308431396497\n",
+      "Iteration: 500, IPS: 113.94710347027186\n",
+      "Iteration: 750, IPS: 115.06826285195196\n",
+      "Iteration: 1000, IPS: 112.3090710126395\n",
+      "Iteration: 1250, IPS: 108.41276909567765\n",
+      "Iteration: 1500, IPS: 111.65700941694988\n",
       "Used memory: 25.0 MB\n"
      ]
     }
@@ -849,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
