--- a/examples/mandelbrot.ipynb
+++ b/examples/mandelbrot.ipynb
@@ -2,21 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TensorFrost module loaded!\n",
-      "TensorProgram:\n",
-      "  Kernel count: 4\n",
-      "  Intermediate buffers: 3\n",
-      "  Lines of generated code: 217\n",
-      "  IR size: 590\n",
-      "\n",
-      "(2048, 2048, 3)\n"
+     "ename": "RuntimeError",
+     "evalue": "Compiler error: compiler exited with non-zero exit code (Error code: 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 36\u001b[0m\n\u001b[0;32m     32\u001b[0m     canvas[i, j, \u001b[39m2\u001b[39m] \u001b[39m=\u001b[39m z_mag\n\u001b[0;32m     34\u001b[0m     \u001b[39mreturn\u001b[39;00m [canvas]\n\u001b[1;32m---> 36\u001b[0m mand \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39;49mcompile(mandelbrot)\n\u001b[0;32m     37\u001b[0m res \u001b[39m=\u001b[39m mand()\n\u001b[0;32m     38\u001b[0m resnp \u001b[39m=\u001b[39m res[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mnumpy\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Compiler error: compiler exited with non-zero exit code (Error code: 1)"
      ]
     }
    ],
@@ -40,9 +37,13 @@
     "    c_re = x * (2.0 / S) - 1.5\n",
     "    c_im = y * (2.0 / S) - 1.0\n",
     "\n",
-    "    for k in range(32):\n",
-    "        z_re, z_im = z_re*z_re - z_im*z_im + c_re, 2.0*z_re*z_im + c_im\n",
-    "        z_re, z_im = tf.clamp(z_re, -4.0, 4.0), tf.clamp(z_im, -4.0, 4.0)\n",
+    "    def loop_body(k):\n",
+    "        z_re.set(z_re*z_re - z_im*z_im + c_re)\n",
+    "        z_im.set(2.0*z_re*z_im + c_im)\n",
+    "        z_re.set(tf.clamp(z_re, -4.0, 4.0))\n",
+    "        z_im.set(tf.clamp(z_im, -4.0, 4.0))\n",
+    "         \n",
+    "    tf.loop(loop_body, 0, 32, 1)\n",
     "\n",
     "    z_mag = tf.sqrt(z_re*z_re + z_im*z_im)\n",
     "\n",
