--- a/examples/matrix_mul.ipynb
+++ b/examples/matrix_mul.ipynb
@@ -2,27 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Input types float, are not valid for operation set",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 41\u001b[0m\n\u001b[0;32m     37\u001b[0m     C[i, j] \u001b[39m=\u001b[39m s\n\u001b[0;32m     39\u001b[0m     \u001b[39mreturn\u001b[39;00m [C]\n\u001b[1;32m---> 41\u001b[0m mmul \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39;49mcompile(matmul)\n",
-      "Cell \u001b[1;32mIn[1], line 35\u001b[0m, in \u001b[0;36mmatmul\u001b[1;34m()\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mloop_body\u001b[39m(k):\n\u001b[0;32m     33\u001b[0m     s\u001b[39m.\u001b[39mset(s \u001b[39m+\u001b[39m A[i, k] \u001b[39m*\u001b[39m Bt[j, k])\n\u001b[1;32m---> 35\u001b[0m tf\u001b[39m.\u001b[39;49mloop(loop_body, \u001b[39m0\u001b[39;49m, M, \u001b[39m1\u001b[39;49m)\n\u001b[0;32m     37\u001b[0m C[i, j] \u001b[39m=\u001b[39m s\n\u001b[0;32m     39\u001b[0m \u001b[39mreturn\u001b[39;00m [C]\n",
-      "Cell \u001b[1;32mIn[1], line 33\u001b[0m, in \u001b[0;36mmatmul.<locals>.loop_body\u001b[1;34m(k)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mloop_body\u001b[39m(k):\n\u001b[1;32m---> 33\u001b[0m     s\u001b[39m.\u001b[39;49mset(s \u001b[39m+\u001b[39;49m A[i, k] \u001b[39m*\u001b[39;49m Bt[j, k])\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Input types float, are not valid for operation set"
+      "TensorProgram:\n",
+      "  Kernel count: 1\n",
+      "  Intermediate buffers: 4\n",
+      "  Lines of generated code: 163\n",
+      "  IR size: 51\n",
+      "\n"
      ]
     }
    ],
@@ -47,7 +39,7 @@
     "    B = tf.input([M, -1], tf.float32)\n",
     "    K = B.shape[1]\n",
     "        \n",
-    "    Bt = transpose(B)\n",
+    "    #Bt = transpose(B)\n",
     "        \n",
     "    #C = tf.zeros([N, K])\n",
     "    #i, j, k = tf.indices([N, K, M])\n",
@@ -59,7 +51,7 @@
     "        \n",
     "    s = tf.zeros([N, K], tf.float32)\n",
     "    def loop_body(k):\n",
-    "        s.set(s + A[i, k] * Bt[j, k])\n",
+    "        s.set(s + A[i, k] * B[k, j])\n",
     "         \n",
     "    tf.loop(loop_body, 0, M, 1)\n",
     "        \n",
@@ -72,28 +64,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 8.115925   9.018217   8.498305  ...  9.5552225 10.647078   8.421918 ]\n",
-      " [ 8.363902   9.556349   8.723376  ...  9.713012  10.854008   8.826418 ]\n",
-      " [ 7.2253046  7.6305404  8.297882  ...  8.948566   9.524342   7.5426407]\n",
+      "[[0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
       " ...\n",
-      " [ 8.691064   7.826514   7.8910794 ...  8.570975   9.986826   8.277089 ]\n",
-      " [ 6.776322   8.020783   7.640442  ...  8.135725   8.8330965  7.243946 ]\n",
-      " [ 8.037988   8.686603   9.1378975 ...  8.803139   9.75271    7.6073923]]\n",
-      "[[ 8.115925   9.018218   8.498305  ...  9.555222  10.647079   8.421916 ]\n",
-      " [ 8.363903   9.55635    8.723375  ...  9.713012  10.85401    8.82642  ]\n",
-      " [ 7.2253036  7.630541   8.297882  ...  8.948566   9.524342   7.5426407]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n",
+      "[[ 6.9465084  9.079161   7.265627  ...  8.016436   9.236372   9.197191 ]\n",
+      " [ 6.902486   6.3903236  5.8573585 ...  7.7967625  9.139305   6.8898563]\n",
+      " [ 5.704646   6.7318573  6.2262774 ...  7.3056474  8.087077   6.555591 ]\n",
       " ...\n",
-      " [ 8.691063   7.826514   7.891079  ...  8.570975   9.986824   8.27709  ]\n",
-      " [ 6.7763214  8.020784   7.640442  ...  8.135726   8.833097   7.243946 ]\n",
-      " [ 8.037989   8.686602   9.1378975 ...  8.80314    9.75271    7.6073914]]\n",
-      "Error: 6.690194e-08\n"
+      " [ 8.4643955  8.408734   7.9083614 ...  8.910719   9.782489   9.163202 ]\n",
+      " [ 7.2582     8.373087   8.0485    ...  8.299904   9.927057   8.96695  ]\n",
+      " [ 8.650953   9.039759   8.850578  ...  9.313644  11.467508   9.604582 ]]\n",
+      "Error: 1.0\n"
      ]
     }
    ],
