--- a/examples/mandelbrot.ipynb
+++ b/examples/mandelbrot.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "Compiler error: compiler exited with non-zero exit code (Error code: 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 36\u001b[0m\n\u001b[0;32m     32\u001b[0m     canvas[i, j, \u001b[39m2\u001b[39m] \u001b[39m=\u001b[39m z_mag\n\u001b[0;32m     34\u001b[0m     \u001b[39mreturn\u001b[39;00m [canvas]\n\u001b[1;32m---> 36\u001b[0m mand \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39;49mcompile(mandelbrot)\n\u001b[0;32m     37\u001b[0m res \u001b[39m=\u001b[39m mand()\n\u001b[0;32m     38\u001b[0m resnp \u001b[39m=\u001b[39m res[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mnumpy\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Compiler error: compiler exited with non-zero exit code (Error code: 1)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorProgram:\n",
+      "  Kernel count: 2\n",
+      "  Intermediate buffers: 1\n",
+      "  Lines of generated code: 263\n",
+      "  IR size: 120\n",
+      "\n",
+      "(2048, 2048, 3)\n"
      ]
     }
    ],
@@ -38,10 +40,10 @@
     "    c_im = y * (2.0 / S) - 1.0\n",
     "\n",
     "    def loop_body(k):\n",
-    "        z_re.set(z_re*z_re - z_im*z_im + c_re)\n",
-    "        z_im.set(2.0*z_re*z_im + c_im)\n",
-    "        z_re.set(tf.clamp(z_re, -4.0, 4.0))\n",
-    "        z_im.set(tf.clamp(z_im, -4.0, 4.0))\n",
+    "        z_re_new = z_re*z_re - z_im*z_im + c_re\n",
+    "        z_im_new = 2.0*z_re*z_im + c_im\n",
+    "        z_re.set(tf.clamp(z_re_new, -4.0, 4.0))\n",
+    "        z_im.set(tf.clamp(z_im_new, -4.0, 4.0))\n",
     "         \n",
     "    tf.loop(loop_body, 0, 32, 1)\n",
     "\n",
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
