Rewrite kernel generation
split into host kernels and compute kernels

--- a/examples/blur.ipynb
+++ b/examples/blur.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "TensorProgram:\n",
       "  Kernel count: 2\n",
-      "  Intermediate buffers: 4\n",
-      "  Lines of generated code: 1161\n",
-      "  IR size: 1498\n",
+      "  Intermediate buffers: 3\n",
+      "  Lines of generated code: 1207\n",
+      "  IR size: 1519\n",
       "\n"
      ]
     }
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
