--- a/examples/mandelbrot.ipynb
+++ b/examples/mandelbrot.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "TensorProgram:\n",
-      "  Kernel count: 2\n",
+      "  Kernel count: 3\n",
       "  Intermediate buffers: 1\n",
-      "  Lines of generated code: 263\n",
+      "  Lines of generated code: 292\n",
       "  IR size: 120\n",
       "\n",
       "(2048, 2048, 3)\n"
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
