--- a/examples/ray_marcher.ipynb
+++ b/examples/ray_marcher.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "TensorProgram:\n",
-      "  Kernel count: 3\n",
+      "  Kernel count: 4\n",
       "  Intermediate buffers: 3\n",
-      "  Lines of generated code: 1061\n",
+      "  Lines of generated code: 1089\n",
       "  IR size: 1342\n",
       "\n"
      ]
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
