--- a/examples/wave_simulation.ipynb
+++ b/examples/wave_simulation.ipynb
@@ -12,9 +12,9 @@
       "TensorFrost module loaded!\n",
       "TensorProgram:\n",
       "  Kernel count: 1\n",
-      "  Intermediate buffers: 4\n",
-      "  Lines of generated code: 285\n",
-      "  IR size: 146\n",
+      "  Intermediate buffers: 3\n",
+      "  Lines of generated code: 326\n",
+      "  IR size: 162\n",
       "\n"
      ]
     }
@@ -60,107 +60,126 @@
      "text": [
       "List of operations:\n",
       "\n",
-      "[] int m0 = memory()\n",
-      "[] int m1 = memory()\n",
+      "Host: \n",
+      "[] int m0 = memory(memory_type=input_shape, cost=0.000000)\n",
+      "[] int m1 = memory(memory_type=input_shape, cost=0.000000)\n",
+      "[] int v1_0 = load(memory=[m0], cost=128.000000)\n",
+      "[] int v1_1 = load(memory=[m1], cost=128.000000)\n",
+      "[v1_0,v1_1] float m2 = memory(memory_type=input, cost=0.000000)\n",
+      "[] int v1_2 = load(memory=[m0], cost=128.000000)\n",
+      "[] int v1_3 = load(memory=[m1], cost=128.000000)\n",
+      "[v1_2,v1_3] float m3 = memory(memory_type=input, cost=0.000000)\n",
       "\n",
-      "[m0,m1] float m2 = memory(memory_type=input, )\n",
-      "[m0,m1] float m3 = memory(memory_type=input, )\n",
+      "Host: \n",
+      "[] int v2_0 = load(memory=[m0], cost=128.000000)\n",
+      "[] int v2_1 = load(memory=[m1], cost=128.000000)\n",
+      "[v2_0,v2_1] float m4 = memory(memory_type=output, cost=0.000000)\n",
       "\n",
-      "[m0,m1] float m4 = memory(memory_type=output, )\n",
+      "Host: \n",
+      "[] int v3_0 = load(memory=[m0], cost=128.000000)\n",
+      "[] int v3_1 = load(memory=[m1], cost=128.000000)\n",
+      "[v3_0,v3_1] float m5 = memory(memory_type=output, cost=0.000000)\n",
       "\n",
-      "[m0,m1] float m5 = memory(memory_type=output, )\n",
-      "\n",
-      "[m0,m1] int v5_0 = dim_id(data=[0], cost=0.000000)\n",
-      "[m0,m1] int v5_1 = dim_id(data=[1], cost=0.000000)\n",
-      "[m0,m1] int v5_2 = dim_id(data=[0], cost=0.000000)\n",
-      "[m0,m1] int v5_3 = dim_id(data=[1], cost=0.000000)\n",
-      "[m0,m1] int v5_5 = sub(inputs=[v5_2,v5_4(1)], cost=1.000000)\n",
-      "[m0,m1] int v5_7 = add(inputs=[v5_2,v5_6(1)], cost=1.000000)\n",
-      "[] int v5_9 = sub(inputs=[m0,v5_8(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_11 = clamp(inputs=[v5_5,v5_10(0),v5_9], cost=7.000000)\n",
-      "[m0,m1] int v5_12 = mul(inputs=[v5_11,m1], cost=9.000000)\n",
-      "[] int v5_14 = sub(inputs=[m1,v5_13(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_16 = clamp(inputs=[v5_3,v5_15(0),v5_14], cost=6.000000)\n",
-      "[m0,m1] int v5_17 = add(inputs=[v5_12,v5_16], cost=16.000000)\n",
-      "[m0,m1] float v5_18 = load(memory=[m2], indices=[v5_17], cost=144.000000)\n",
-      "[] int v5_20 = sub(inputs=[m0,v5_19(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_22 = clamp(inputs=[v5_7,v5_21(0),v5_20], cost=7.000000)\n",
-      "[m0,m1] int v5_23 = mul(inputs=[v5_22,m1], cost=9.000000)\n",
-      "[] int v5_25 = sub(inputs=[m1,v5_24(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_27 = clamp(inputs=[v5_3,v5_26(0),v5_25], cost=6.000000)\n",
-      "[m0,m1] int v5_28 = add(inputs=[v5_23,v5_27], cost=16.000000)\n",
-      "[m0,m1] float v5_29 = load(memory=[m2], indices=[v5_28], cost=144.000000)\n",
-      "[m0,m1] float v5_30 = add(inputs=[v5_18,v5_29], cost=289.000000)\n",
-      "[m0,m1] int v5_32 = sub(inputs=[v5_3,v5_31(1)], cost=1.000000)\n",
-      "[] int v5_34 = sub(inputs=[m0,v5_33(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_36 = clamp(inputs=[v5_2,v5_35(0),v5_34], cost=6.000000)\n",
-      "[m0,m1] int v5_37 = mul(inputs=[v5_36,m1], cost=8.000000)\n",
-      "[] int v5_39 = sub(inputs=[m1,v5_38(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_41 = clamp(inputs=[v5_32,v5_40(0),v5_39], cost=7.000000)\n",
-      "[m0,m1] int v5_42 = add(inputs=[v5_37,v5_41], cost=16.000000)\n",
-      "[m0,m1] float v5_43 = load(memory=[m2], indices=[v5_42], cost=144.000000)\n",
-      "[m0,m1] float v5_44 = add(inputs=[v5_30,v5_43], cost=434.000000)\n",
-      "[m0,m1] int v5_46 = add(inputs=[v5_3,v5_45(1)], cost=1.000000)\n",
-      "[] int v5_48 = sub(inputs=[m0,v5_47(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_50 = clamp(inputs=[v5_2,v5_49(0),v5_48], cost=6.000000)\n",
-      "[m0,m1] int v5_51 = mul(inputs=[v5_50,m1], cost=8.000000)\n",
-      "[] int v5_53 = sub(inputs=[m1,v5_52(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_55 = clamp(inputs=[v5_46,v5_54(0),v5_53], cost=7.000000)\n",
-      "[m0,m1] int v5_56 = add(inputs=[v5_51,v5_55], cost=16.000000)\n",
-      "[m0,m1] float v5_57 = load(memory=[m2], indices=[v5_56], cost=144.000000)\n",
-      "[m0,m1] float v5_58 = add(inputs=[v5_44,v5_57], cost=579.000000)\n",
-      "[] int v5_61 = sub(inputs=[m0,v5_60(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_63 = clamp(inputs=[v5_2,v5_62(0),v5_61], cost=6.000000)\n",
-      "[m0,m1] int v5_64 = mul(inputs=[v5_63,m1], cost=8.000000)\n",
-      "[] int v5_66 = sub(inputs=[m1,v5_65(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_68 = clamp(inputs=[v5_3,v5_67(0),v5_66], cost=6.000000)\n",
-      "[m0,m1] int v5_69 = add(inputs=[v5_64,v5_68], cost=15.000000)\n",
-      "[m0,m1] float v5_70 = load(memory=[m2], indices=[v5_69], cost=143.000000)\n",
-      "[m0,m1] float v5_71 = mul(inputs=[v5_59(4.000000f),v5_70], cost=144.000000)\n",
-      "[m0,m1] float v5_72 = sub(inputs=[v5_58,v5_71], cost=724.000000)\n",
-      "[] int v5_75 = sub(inputs=[m0,v5_74(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_77 = clamp(inputs=[v5_0,v5_76(0),v5_75], cost=6.000000)\n",
-      "[m0,m1] int v5_78 = mul(inputs=[v5_77,m1], cost=8.000000)\n",
-      "[] int v5_80 = sub(inputs=[m1,v5_79(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_82 = clamp(inputs=[v5_1,v5_81(0),v5_80], cost=6.000000)\n",
-      "[m0,m1] int v5_83 = add(inputs=[v5_78,v5_82], cost=15.000000)\n",
-      "[] float v5_84 = load(memory=[m2], indices=[v5_83], cost=143.000000)\n",
-      "[m0,m1] float v5_85 = mul(inputs=[v5_73(6.283185f),v5_84], cost=144.000000)\n",
-      "[m0,m1] float v5_86 = sin(inputs=[v5_85], cost=146.000000)\n",
-      "[m0,m1] float v5_88 = mul(inputs=[v5_87(0.100000f),v5_86], cost=147.000000)\n",
-      "[m0,m1] float v5_89 = sub(inputs=[v5_72,v5_88], cost=872.000000)\n",
-      "[m0,m1] float v5_91 = mul(inputs=[v5_90(0.200000f),v5_89], cost=873.000000)\n",
-      "[] int v5_93 = sub(inputs=[m0,v5_92(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_95 = clamp(inputs=[v5_0,v5_94(0),v5_93], cost=6.000000)\n",
-      "[m0,m1] int v5_96 = mul(inputs=[v5_95,m1], cost=8.000000)\n",
-      "[] int v5_98 = sub(inputs=[m1,v5_97(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_100 = clamp(inputs=[v5_1,v5_99(0),v5_98], cost=6.000000)\n",
-      "[m0,m1] int v5_101 = add(inputs=[v5_96,v5_100], cost=15.000000)\n",
-      "[] float v5_102 = load(memory=[m3], indices=[v5_101], cost=143.000000)\n",
-      "[m0,m1] float v5_103 = add(inputs=[v5_102,v5_91], cost=1017.000000)\n",
-      "[] int v5_105 = sub(inputs=[m0,v5_104(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_107 = clamp(inputs=[v5_0,v5_106(0),v5_105], cost=6.000000)\n",
-      "[m0,m1] int v5_108 = mul(inputs=[v5_107,m1], cost=8.000000)\n",
-      "[] int v5_110 = sub(inputs=[m1,v5_109(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_112 = clamp(inputs=[v5_1,v5_111(0),v5_110], cost=6.000000)\n",
-      "[m0,m1] int v5_113 = add(inputs=[v5_108,v5_112], cost=15.000000)\n",
-      "[m0,m1] store(memory=[m4], inputs=[v5_103], indices=[v5_113], cost=1160.000000)\n",
-      "[m0,m1] float v5_116 = mul(inputs=[v5_115(0.200000f),v5_103], cost=1018.000000)\n",
-      "[] int v5_118 = sub(inputs=[m0,v5_117(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_120 = clamp(inputs=[v5_0,v5_119(0),v5_118], cost=6.000000)\n",
-      "[m0,m1] int v5_121 = mul(inputs=[v5_120,m1], cost=8.000000)\n",
-      "[] int v5_123 = sub(inputs=[m1,v5_122(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_125 = clamp(inputs=[v5_1,v5_124(0),v5_123], cost=6.000000)\n",
-      "[m0,m1] int v5_126 = add(inputs=[v5_121,v5_125], cost=15.000000)\n",
-      "[] float v5_127 = load(memory=[m2], indices=[v5_126], cost=143.000000)\n",
-      "[m0,m1] float v5_128 = add(inputs=[v5_127,v5_116], cost=1162.000000)\n",
-      "[] int v5_130 = sub(inputs=[m0,v5_129(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_132 = clamp(inputs=[v5_0,v5_131(0),v5_130], cost=6.000000)\n",
-      "[m0,m1] int v5_133 = mul(inputs=[v5_132,m1], cost=8.000000)\n",
-      "[] int v5_135 = sub(inputs=[m1,v5_134(1)], cost=2.000000)\n",
-      "[m0,m1] int v5_137 = clamp(inputs=[v5_1,v5_136(0),v5_135], cost=6.000000)\n",
-      "[m0,m1] int v5_138 = add(inputs=[v5_133,v5_137], cost=15.000000)\n",
-      "[m0,m1] store(memory=[m5], inputs=[v5_128], indices=[v5_138], cost=1305.000000)\n",
+      "Kernel: \n",
+      "[] int v4_0 = load(memory=[m0], cost=128.000000)\n",
+      "[] int v4_1 = load(memory=[m1], cost=128.000000)\n",
+      "[] int v4_2 = load(memory=[m0], cost=128.000000)\n",
+      "[] int v4_3 = load(memory=[m1], cost=128.000000)\n",
+      "[] int v4_4 = load(memory=[m0], cost=128.000000)\n",
+      "[] int v4_5 = load(memory=[m1], cost=128.000000)\n",
+      "[] int v4_6 = load(memory=[m0], cost=128.000000)\n",
+      "[] int v4_7 = load(memory=[m1], cost=128.000000)\n",
+      "[m0,m1] int v4_8 = dim_id(data=[0], cost=0.000000)\n",
+      "[m0,m1] int v4_9 = dim_id(data=[1], cost=0.000000)\n",
+      "[m0,m1] int v4_10 = dim_id(data=[0], cost=0.000000)\n",
+      "[m0,m1] int v4_11 = dim_id(data=[1], cost=0.000000)\n",
+      "[m0,m1] int v4_13 = sub(inputs=[v4_10,v4_12(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_15 = add(inputs=[v4_10,v4_14(1)], cost=1.000000)\n",
+      "[] int v4_17 = sub(inputs=[v4_0,v4_16(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_19 = clamp(inputs=[v4_13,v4_18(0),v4_17], cost=134.000000)\n",
+      "[m0,m1] int v4_20 = mul(inputs=[v4_19,v4_1], cost=263.000000)\n",
+      "[] int v4_22 = sub(inputs=[v4_1,v4_21(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_24 = clamp(inputs=[v4_11,v4_23(0),v4_22], cost=133.000000)\n",
+      "[m0,m1] int v4_25 = add(inputs=[v4_20,v4_24], cost=397.000000)\n",
+      "[m0,m1] float v4_26 = load(memory=[m2], indices=[v4_25], cost=525.000000)\n",
+      "[] int v4_28 = sub(inputs=[v4_0,v4_27(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_30 = clamp(inputs=[v4_15,v4_29(0),v4_28], cost=134.000000)\n",
+      "[m0,m1] int v4_31 = mul(inputs=[v4_30,v4_1], cost=263.000000)\n",
+      "[] int v4_33 = sub(inputs=[v4_1,v4_32(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_35 = clamp(inputs=[v4_11,v4_34(0),v4_33], cost=133.000000)\n",
+      "[m0,m1] int v4_36 = add(inputs=[v4_31,v4_35], cost=397.000000)\n",
+      "[m0,m1] float v4_37 = load(memory=[m2], indices=[v4_36], cost=525.000000)\n",
+      "[m0,m1] float v4_38 = add(inputs=[v4_26,v4_37], cost=1051.000000)\n",
+      "[m0,m1] int v4_40 = sub(inputs=[v4_11,v4_39(1)], cost=1.000000)\n",
+      "[] int v4_42 = sub(inputs=[v4_0,v4_41(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_44 = clamp(inputs=[v4_10,v4_43(0),v4_42], cost=133.000000)\n",
+      "[m0,m1] int v4_45 = mul(inputs=[v4_44,v4_1], cost=262.000000)\n",
+      "[] int v4_47 = sub(inputs=[v4_1,v4_46(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_49 = clamp(inputs=[v4_40,v4_48(0),v4_47], cost=134.000000)\n",
+      "[m0,m1] int v4_50 = add(inputs=[v4_45,v4_49], cost=397.000000)\n",
+      "[m0,m1] float v4_51 = load(memory=[m2], indices=[v4_50], cost=525.000000)\n",
+      "[m0,m1] float v4_52 = add(inputs=[v4_38,v4_51], cost=1577.000000)\n",
+      "[m0,m1] int v4_54 = add(inputs=[v4_11,v4_53(1)], cost=1.000000)\n",
+      "[] int v4_56 = sub(inputs=[v4_0,v4_55(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_58 = clamp(inputs=[v4_10,v4_57(0),v4_56], cost=133.000000)\n",
+      "[m0,m1] int v4_59 = mul(inputs=[v4_58,v4_1], cost=262.000000)\n",
+      "[] int v4_61 = sub(inputs=[v4_1,v4_60(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_63 = clamp(inputs=[v4_54,v4_62(0),v4_61], cost=134.000000)\n",
+      "[m0,m1] int v4_64 = add(inputs=[v4_59,v4_63], cost=397.000000)\n",
+      "[m0,m1] float v4_65 = load(memory=[m2], indices=[v4_64], cost=525.000000)\n",
+      "[m0,m1] float v4_66 = add(inputs=[v4_52,v4_65], cost=2103.000000)\n",
+      "[] int v4_69 = sub(inputs=[v4_0,v4_68(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_71 = clamp(inputs=[v4_10,v4_70(0),v4_69], cost=133.000000)\n",
+      "[m0,m1] int v4_72 = mul(inputs=[v4_71,v4_1], cost=262.000000)\n",
+      "[] int v4_74 = sub(inputs=[v4_1,v4_73(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_76 = clamp(inputs=[v4_11,v4_75(0),v4_74], cost=133.000000)\n",
+      "[m0,m1] int v4_77 = add(inputs=[v4_72,v4_76], cost=396.000000)\n",
+      "[m0,m1] float v4_78 = load(memory=[m2], indices=[v4_77], cost=524.000000)\n",
+      "[m0,m1] float v4_79 = mul(inputs=[v4_67(4.000000f),v4_78], cost=525.000000)\n",
+      "[m0,m1] float v4_80 = sub(inputs=[v4_66,v4_79], cost=2629.000000)\n",
+      "[] int v4_83 = sub(inputs=[v4_0,v4_82(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_85 = clamp(inputs=[v4_8,v4_84(0),v4_83], cost=133.000000)\n",
+      "[m0,m1] int v4_86 = mul(inputs=[v4_85,v4_1], cost=262.000000)\n",
+      "[] int v4_88 = sub(inputs=[v4_1,v4_87(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_90 = clamp(inputs=[v4_9,v4_89(0),v4_88], cost=133.000000)\n",
+      "[m0,m1] int v4_91 = add(inputs=[v4_86,v4_90], cost=396.000000)\n",
+      "[] float v4_92 = load(memory=[m2], indices=[v4_91], cost=524.000000)\n",
+      "[m0,m1] float v4_93 = mul(inputs=[v4_81(6.283185f),v4_92], cost=525.000000)\n",
+      "[m0,m1] float v4_94 = sin(inputs=[v4_93], cost=527.000000)\n",
+      "[m0,m1] float v4_96 = mul(inputs=[v4_95(0.100000f),v4_94], cost=528.000000)\n",
+      "[m0,m1] float v4_97 = sub(inputs=[v4_80,v4_96], cost=3158.000000)\n",
+      "[m0,m1] float v4_99 = mul(inputs=[v4_98(0.200000f),v4_97], cost=3159.000000)\n",
+      "[] int v4_101 = sub(inputs=[v4_2,v4_100(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_103 = clamp(inputs=[v4_8,v4_102(0),v4_101], cost=133.000000)\n",
+      "[m0,m1] int v4_104 = mul(inputs=[v4_103,v4_3], cost=262.000000)\n",
+      "[] int v4_106 = sub(inputs=[v4_3,v4_105(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_108 = clamp(inputs=[v4_9,v4_107(0),v4_106], cost=133.000000)\n",
+      "[m0,m1] int v4_109 = add(inputs=[v4_104,v4_108], cost=396.000000)\n",
+      "[] float v4_110 = load(memory=[m3], indices=[v4_109], cost=524.000000)\n",
+      "[m0,m1] float v4_111 = add(inputs=[v4_110,v4_99], cost=3684.000000)\n",
+      "[] int v4_113 = sub(inputs=[v4_4,v4_112(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_115 = clamp(inputs=[v4_8,v4_114(0),v4_113], cost=133.000000)\n",
+      "[m0,m1] int v4_116 = mul(inputs=[v4_115,v4_5], cost=262.000000)\n",
+      "[] int v4_118 = sub(inputs=[v4_5,v4_117(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_120 = clamp(inputs=[v4_9,v4_119(0),v4_118], cost=133.000000)\n",
+      "[m0,m1] int v4_121 = add(inputs=[v4_116,v4_120], cost=396.000000)\n",
+      "[m0,m1] store(memory=[m4], inputs=[v4_111], indices=[v4_121], cost=4208.000000)\n",
+      "[m0,m1] float v4_124 = mul(inputs=[v4_123(0.200000f),v4_111], cost=3685.000000)\n",
+      "[] int v4_126 = sub(inputs=[v4_0,v4_125(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_128 = clamp(inputs=[v4_8,v4_127(0),v4_126], cost=133.000000)\n",
+      "[m0,m1] int v4_129 = mul(inputs=[v4_128,v4_1], cost=262.000000)\n",
+      "[] int v4_131 = sub(inputs=[v4_1,v4_130(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_133 = clamp(inputs=[v4_9,v4_132(0),v4_131], cost=133.000000)\n",
+      "[m0,m1] int v4_134 = add(inputs=[v4_129,v4_133], cost=396.000000)\n",
+      "[] float v4_135 = load(memory=[m2], indices=[v4_134], cost=524.000000)\n",
+      "[m0,m1] float v4_136 = add(inputs=[v4_135,v4_124], cost=4210.000000)\n",
+      "[] int v4_138 = sub(inputs=[v4_6,v4_137(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_140 = clamp(inputs=[v4_8,v4_139(0),v4_138], cost=133.000000)\n",
+      "[m0,m1] int v4_141 = mul(inputs=[v4_140,v4_7], cost=262.000000)\n",
+      "[] int v4_143 = sub(inputs=[v4_7,v4_142(1)], cost=129.000000)\n",
+      "[m0,m1] int v4_145 = clamp(inputs=[v4_9,v4_144(0),v4_143], cost=133.000000)\n",
+      "[m0,m1] int v4_146 = add(inputs=[v4_141,v4_145], cost=396.000000)\n",
+      "[m0,m1] store(memory=[m5], inputs=[v4_136], indices=[v4_146], cost=4734.000000)\n",
       "\n"
      ]
     }
@@ -179,16 +198,16 @@
      "output_type": "stream",
      "text": [
       "Used memory: 262144\n",
-      "Iterations per second: 869.5651452798309\n",
-      "Iterations per second: 6249.614828721708\n",
-      "Iterations per second: 5555.81105783241\n",
-      "Iterations per second: 6249.987334038654\n",
-      "Iterations per second: 5882.366800835869\n",
-      "Iterations per second: 5263.209145323814\n",
-      "Iterations per second: 4347.735588933462\n",
-      "Iterations per second: 4761.547106837558\n",
-      "Iterations per second: 5000.362422508345\n",
-      "Iterations per second: 5491.1485539976175\n",
+      "Iterations per second: 1265.8304863768606\n",
+      "Iterations per second: 6249.428592713998\n",
+      "Iterations per second: 6666.726006930095\n",
+      "Iterations per second: 6667.361861766389\n",
+      "Iterations per second: 6249.894203546416\n",
+      "Iterations per second: 6666.514082268422\n",
+      "Iterations per second: 6250.080467306431\n",
+      "Iterations per second: 6250.080467306431\n",
+      "Iterations per second: 5881.87185348273\n",
+      "Iterations per second: 6250.173603349874\n",
       "Used memory: 262146\n"
      ]
     }
