--- a/examples/blur.ipynb
+++ b/examples/blur.ipynb
@@ -10,11 +10,10 @@
      "output_type": "stream",
      "text": [
       "TensorFrost module loaded!\n",
-      "TensorProgram:\n",
+      "blur:\n",
       "  Kernel count: 2\n",
-      "  Intermediate buffers: 3\n",
-      "  Lines of generated code: 1207\n",
-      "  IR size: 1519\n",
+      "  Intermediate buffers: 1\n",
+      "  Lines of generated code: 1256\n",
       "\n"
      ]
     }
