--- a/examples/ray_marcher.ipynb
+++ b/examples/ray_marcher.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorProgram:\n",
+      "TensorFrost module loaded!\n",
+      "volume_ray_marcher:\n",
       "  Kernel count: 3\n",
       "  Intermediate buffers: 1\n",
-      "  Lines of generated code: 1167\n",
+      "  Lines of generated code: 1172\n",
       "\n"
      ]
     },
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
