--- a/examples/qr.ipynb
+++ b/examples/qr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +40,25 @@
     "        A[:, i+1:n] -= np.outer(Q[:, i], R[i, i+1:n])\n",
     "    R[n-1, n-1] = np.linalg.norm(A[:, n-1])\n",
     "    Q[:, n-1] = A[:, n-1] / R[n-1, n-1]\n",
+    "    return Q, R\n",
+    "\n",
+    "# Householder reflection\n",
+    "def householder_reflection(a):\n",
+    "    v = a.copy()\n",
+    "    v[0] = v[0] + np.copysign(np.linalg.norm(v), a[0])\n",
+    "    v = v / np.linalg.norm(v)\n",
+    "    return np.eye(len(a)) - 2 * np.outer(v, v)\n",
+    "\n",
+    "# QR decomposition using Householder reflections\n",
+    "def qr_decomposition(A):\n",
+    "    m, n = A.shape\n",
+    "    Q = np.eye(m)\n",
+    "    R = A.copy()\n",
+    "    for i in range(min(m, n)):\n",
+    "        H = np.eye(m)\n",
+    "        H[i:, i:] = householder_reflection(R[i:, i])\n",
+    "        Q = Q @ H\n",
+    "        R = H @ R\n",
     "    return Q, R\n",
     "\n",
     "#dynamic size QR decomposition\n",
@@ -86,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -95,20 +114,25 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 2.4552312978479334e-16\n",
-      "Error using TensorFrost: 1.0842518350953723e-07\n",
+      "Error: 2.607399605677454e-16\n",
+      "Error using TensorFrost: 1.1614004081603156e-07\n",
       "Q:\n",
-      " [[ 0.47427282  0.36220378  0.457387   -0.564107    0.3412536 ]\n",
-      " [ 0.7475643  -0.41951546 -0.158624   -0.063334   -0.48577937]\n",
-      " [ 0.03641628  0.7128565  -0.5785942  -0.19003461 -0.345869  ]\n",
-      " [ 0.23954163  0.4284115   0.45740804  0.70089716 -0.24208356]\n",
-      " [ 0.39687106  0.03338427 -0.4707889   0.38781714  0.68508   ]]\n",
+      " [[ 6.3341695e-01 -1.8382910e-01  3.3214268e-01 -1.4583039e-04\n",
+      "  -6.7429304e-01]\n",
+      " [ 4.1568449e-01  4.7665125e-01 -6.1356419e-01 -4.7097704e-01\n",
+      "  -4.1588847e-02]\n",
+      " [ 5.8963472e-01 -4.2631903e-01 -2.2058693e-01  3.2675329e-01\n",
+      "   5.6138843e-01]\n",
+      " [ 2.5641686e-01  3.8103092e-01  6.8158746e-01 -3.1775081e-01\n",
+      "   4.7279873e-01]\n",
+      " [ 1.1211982e-01  6.4193302e-01 -3.6244455e-04  7.5527966e-01\n",
+      "  -7.0025690e-02]]\n",
       "R:\n",
-      " [[ 1.2178518   1.1900272   0.7325122   0.97588885  0.80657625]\n",
-      " [ 0.          0.86835593  0.90782845  0.36916694  0.52878106]\n",
-      " [ 0.          0.          0.5208241  -0.03697312 -0.06439757]\n",
-      " [ 0.          0.          0.          0.32581264 -0.18506089]\n",
-      " [ 0.          0.          0.          0.          0.69983953]]\n"
+      " [[ 1.5585067   1.3178939   1.1389446   0.80471003  1.2012088 ]\n",
+      " [ 0.          0.7865809   0.5951857   0.80946875  0.4737573 ]\n",
+      " [ 0.          0.          0.37996578 -0.09868313 -0.14027269]\n",
+      " [ 0.          0.          0.          0.45774737 -0.41879633]\n",
+      " [ 0.          0.          0.          0.          0.33441728]]\n"
      ]
     }
    ],
@@ -140,25 +164,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for naive NumPy QR decomposition: 2.3672475814819336\n",
-      "Time for TensorFrost QR decomposition: 0.42299795150756836\n",
-      "Time for built-in NumPy QR decomposition: 0.13300085067749023\n",
-      "Error: 5.257813726875746e-13\n",
-      "Error using TensorFrost: 0.00024719972344781324\n"
+      "Time for naive NumPy QR decomposition: 1.0544276237487793\n",
+      "Time for TensorFrost QR decomposition: 0.16899871826171875\n",
+      "Time for built-in NumPy QR decomposition: 0.10702252388000488\n",
+      "Time for householder QR decomposition: 10.901634693145752\n",
+      "Error: 0.0001499538873179337\n",
+      "Error using TensorFrost: 0.00016575323\n"
      ]
     }
    ],
    "source": [
     "#performance test\n",
     "import time\n",
-    "A = np.random.rand(1000, 1000)\n",
+    "A = np.random.rand(750, 750).astype(np.float32)\n",
     "\n",
     "#naive NumPy QR decomposition\n",
     "start = time.time()\n",
@@ -175,6 +200,11 @@
     "start = time.time()\n",
     "Q, R = np.linalg.qr(A)\n",
     "print(\"Time for built-in NumPy QR decomposition:\", time.time() - start)\n",
+    "\n",
+    "#householder QR decomposition\n",
+    "start = time.time()\n",
+    "Q, R = qr_decomposition(A)\n",
+    "print(\"Time for householder QR decomposition:\", time.time() - start)\n",
     "\n",
     "print(\"Error:\", np.linalg.norm(A - np.dot(Q, R)))\n",
     "print(\"Error using TensorFrost:\", np.linalg.norm(A - np.dot(Qtf.numpy, Rtf.numpy)))"
