--- a/examples/qr.ipynb
+++ b/examples/qr.ipynb
@@ -89,6 +89,9 @@
     "        p, k = tf.index_grid([0, i+1], [m, n])\n",
     "        A[p, k] -= Q[p, i] * R[i, k]\n",
     "\n",
+    "        #p, k = tf.index_grid([0, i+1], [m, n])\n",
+    "        #R[i, t] = (Q[p, i] * A[p, k]).sum(axis=0) #TODO: implement sum reduction\n",
+    "\n",
     "    tf.loop(loop_body, 0, n-1, 1)\n",
     "\n",
     "    norm2 = tf.zeros([1], tf.float32)\n",
