Fix generation of loop over single kernel, add FFT example

--- a/examples/matrix_mul.ipynb
+++ b/examples/matrix_mul.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "matmul:\n",
-      "  Kernel count: 1\n",
-      "  Intermediate buffers: 0\n",
-      "  Lines of generated code: 311\n",
+      "  Kernel count: 2\n",
+      "  Intermediate buffers: 1\n",
+      "  Lines of generated code: 347\n",
       "\n"
      ]
     }
@@ -39,22 +39,19 @@
     "    K = B.shape[1]\n",
     "        \n",
     "    Bt = transpose(B)\n",
-    "        \n",
-    "    #C = tf.zeros([N, K])\n",
-    "    #i, j, k = tf.indices([N, K, M])\n",
-    "    #tf.scatterAdd(C[i, j], A[i, k] * Bt[j, k])\n",
-    "        \n",
-    "    C = tf.buffer([N, K])\n",
-    "        \n",
-    "    i, j = C.indices\n",
-    "        \n",
-    "    s = tf.zeros([N, K], tf.float32)\n",
-    "    def loop_body(k):\n",
-    "        s.set(s + A[i, k] * Bt[j, k])\n",
-    "         \n",
-    "    tf.loop(loop_body, 0, M, 1)\n",
-    "        \n",
-    "    C[i, j] = s\n",
+    "    \n",
+    "    if(False): # This does atomics - very slow\n",
+    "        C = tf.zeros([N, K])\n",
+    "        i, j, k = tf.indices([N, K, M])\n",
+    "        tf.scatterAdd(C[i, j], A[i, k] * Bt[j, k])\n",
+    "    else: # This does a loop - much faster\n",
+    "        C = tf.buffer([N, K])\n",
+    "        i, j = C.indices\n",
+    "        s = tf.zeros([N, K], tf.float32)\n",
+    "        def loop_body(k):\n",
+    "            s.set(s + A[i, k] * Bt[j, k])\n",
+    "        tf.loop(loop_body, 0, M, 1)\n",
+    "        C[i, j] = s\n",
     "        \n",
     "    return [C]\n",
     "\n",
@@ -63,28 +60,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 6.9058127  6.4943595  9.217809  ...  7.5131345  7.7720985  9.155246 ]\n",
-      " [ 6.8360023  7.144544   8.069699  ...  6.553105   8.503913   7.3255916]\n",
-      " [ 7.1090093  6.9138517  7.860469  ...  7.288773   7.9731975  7.425622 ]\n",
+      "[[ 8.074466   8.427568   8.578791  ... 10.511319   6.3699727  8.301342 ]\n",
+      " [ 6.8220043  7.237755   9.076039  ...  9.094112   6.9691224  7.7056828]\n",
+      " [ 8.794326   9.802705  10.55278   ... 10.962888   7.2767286 10.245248 ]\n",
       " ...\n",
-      " [ 8.669722   8.078477   9.995454  ...  8.298476  10.113775  10.026747 ]\n",
-      " [ 7.366826   5.9925632  7.5778313 ...  5.91198    8.036941   7.806314 ]\n",
-      " [ 6.890036   6.2021017  8.088246  ...  6.2884345  7.896097   7.7949963]]\n",
-      "[[ 6.905813   6.494359   9.21781   ...  7.5131345  7.7720985  9.155243 ]\n",
-      " [ 6.836003   7.1445446  8.069699  ...  6.553105   8.503914   7.325592 ]\n",
-      " [ 7.1090093  6.9138527  7.86047   ...  7.2887735  7.973198   7.4256215]\n",
+      " [ 7.5296073  7.5580726  7.154194  ...  8.320284   6.3350544  6.6962795]\n",
+      " [ 7.2596693  7.999043   8.516508  ...  7.762613   6.2635636  8.079252 ]\n",
+      " [ 7.945946   8.4232025 10.2515135 ... 10.282951   7.5098615  9.013892 ]]\n",
+      "[[ 8.074465   8.4275675  8.578789  ... 10.51132    6.3699727  8.301341 ]\n",
+      " [ 6.8220043  7.237755   9.076038  ...  9.0941105  6.969123   7.7056828]\n",
+      " [ 8.794325   9.802705  10.55278   ... 10.962889   7.276728  10.245247 ]\n",
       " ...\n",
-      " [ 8.669722   8.078476   9.995455  ...  8.298476  10.113776  10.026749 ]\n",
-      " [ 7.3668265  5.9925613  7.5778313 ...  5.9119797  8.036941   7.8063145]\n",
-      " [ 6.8900356  6.202101   8.088247  ...  6.2884355  7.896097   7.794996 ]]\n",
-      "Error: 6.650822e-08\n"
+      " [ 7.529607   7.5580726  7.154193  ...  8.320282   6.3350554  6.6962795]\n",
+      " [ 7.2596693  7.9990425  8.516508  ...  7.762613   6.263564   8.079252 ]\n",
+      " [ 7.9459467  8.4232025 10.251514  ... 10.282951   7.5098624  9.013893 ]]\n",
+      "Error: 6.375005e-08\n"
      ]
     }
    ],
@@ -110,16 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Numpy:  0.001166752319104501\n",
-      "TensorFrost:  0.02092698927204978\n",
-      "TF/NP:  17.936102572405034\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 22\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mNumpy\u001b[39m():\n\u001b[0;32m     20\u001b[0m     Cnp2 \u001b[38;5;241m=\u001b[39m Bnp \u001b[38;5;241m@\u001b[39m Anp\n\u001b[1;32m---> 22\u001b[0m np_time \u001b[38;5;241m=\u001b[39m \u001b[43mTestFunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mNumpy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumpy: \u001b[39m\u001b[38;5;124m\"\u001b[39m, np_time)\n\u001b[0;32m     25\u001b[0m tf_time \u001b[38;5;241m=\u001b[39m TestFunc(TensorFrost, \u001b[38;5;241m10\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[5], line 10\u001b[0m, in \u001b[0;36mTestFunc\u001b[1;34m(f1, max_time)\u001b[0m\n\u001b[0;32m      8\u001b[0m t0 \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m      9\u001b[0m i \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtime\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m-\u001b[39m t0 \u001b[38;5;241m<\u001b[39m max_time:\n\u001b[0;32m     11\u001b[0m     f1()\n\u001b[0;32m     12\u001b[0m     i \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
