Fix kernel gen, update examples

--- a/examples/fft.ipynb
+++ b/examples/fft.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "FFT:\n",
       "  Kernel count: 2\n",
       "  Intermediate buffers: 0\n",
@@ -22,7 +23,7 @@
     "import TensorFrost as tf\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "tf.initialize(tf.cpu, \"/O2 /fp:fast /openmp\")\n",
+    "tf.initialize(tf.cpu)\n",
     "\n",
     "def reverseBits(num, bit_count):\n",
     "    reverse_num = tf.zeros([], tf.int32)\n",
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
