--- a/examples/fluid_simulation.ipynb
+++ b/examples/fluid_simulation.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "FluidTest:\n",
       "  Kernel count: 23\n",
       "  Intermediate buffers: 23\n",
@@ -28,7 +29,7 @@
     "from IPython.display import Video\n",
     "import os\n",
     "\n",
-    "tf.initialize(tf.cpu, \"/O2 /fp:fast /openmp:llvm\")\n",
+    "tf.initialize(tf.cpu)\n",
     "\n",
     "N = 512 \n",
     "M = 1024\n",
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,17 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 250, IPS: 42.89354903645409\n",
-      "Iteration: 500, IPS: 45.935546388582175\n",
-      "Iteration: 750, IPS: 45.72343933251146\n",
-      "Iteration: 1000, IPS: 46.67497927042213\n",
+      "Iteration: 250, IPS: 41.51506452105758\n",
+      "Iteration: 500, IPS: 60.9059912572403\n",
+      "Iteration: 750, IPS: 61.11046420888112\n",
+      "Iteration: 1000, IPS: 61.43518957665991\n",
       "Used memory: 40.0 MB\n"
      ]
     }
@@ -352,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
