--- a/examples/sphere_tracer.ipynb
+++ b/examples/sphere_tracer.ipynb
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "import time\n",
     "\n",
-    "tf.initialize(tf.cpu, \"/O2 /fp:fast /openmp\")\n",
+    "tf.initialize(tf.cpu)\n",
     "\n",
     "resolution = 512\n",
     "eps = 0.005\n",
