--- a/examples/mandelbrot.ipynb
+++ b/examples/mandelbrot.ipynb
@@ -25,7 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "import time\n",
     "\n",
-    "tf.initialize(tf.cpu, \"-O2 -ffast-math -fopenmp\")\n",
+    "tf.initialize(tf.cpu)\n",
     "\n",
     "S = 2048\n",
     "\n",
