--- a/examples/qr.ipynb
+++ b/examples/qr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "import TensorFrost as tf\n",
     "\n",
-    "tf.initialize(tf.cpu, \"/O2 /fp:fast /openmp\")\n",
+    "tf.initialize(tf.cpu)\n",
     "\n",
     "def modified_gram_schmidt(A):\n",
     "    \"\"\"\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,25 +117,20 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 2.607399605677454e-16\n",
-      "Error using TensorFrost: 1.1614004081603156e-07\n",
+      "Error: 2.648622249855669e-16\n",
+      "Error using TensorFrost: 1.3845095513289123e-07\n",
       "Q:\n",
-      " [[ 6.3341695e-01 -1.8382910e-01  3.3214268e-01 -1.4583039e-04\n",
-      "  -6.7429304e-01]\n",
-      " [ 4.1568449e-01  4.7665125e-01 -6.1356419e-01 -4.7097704e-01\n",
-      "  -4.1588847e-02]\n",
-      " [ 5.8963472e-01 -4.2631903e-01 -2.2058693e-01  3.2675329e-01\n",
-      "   5.6138843e-01]\n",
-      " [ 2.5641686e-01  3.8103092e-01  6.8158746e-01 -3.1775081e-01\n",
-      "   4.7279873e-01]\n",
-      " [ 1.1211982e-01  6.4193302e-01 -3.6244455e-04  7.5527966e-01\n",
-      "  -7.0025690e-02]]\n",
+      " [[ 0.0377587   0.7896242   0.20033686 -0.55312365 -0.1702548 ]\n",
+      " [ 0.12313633  0.36205173  0.49306178  0.75991184 -0.18215491]\n",
+      " [ 0.6781403  -0.03947232 -0.4095465   0.02884221 -0.6082818 ]\n",
+      " [ 0.2732769   0.4282989  -0.5222302   0.24392606  0.64004415]\n",
+      " [ 0.669968   -0.24579279  0.5256449  -0.23718426  0.39770547]]\n",
       "R:\n",
-      " [[ 1.5585067   1.3178939   1.1389446   0.80471003  1.2012088 ]\n",
-      " [ 0.          0.7865809   0.5951857   0.80946875  0.4737573 ]\n",
-      " [ 0.          0.          0.37996578 -0.09868313 -0.14027269]\n",
-      " [ 0.          0.          0.          0.45774737 -0.41879633]\n",
-      " [ 0.          0.          0.          0.          0.33441728]]\n"
+      " [[1.3328722  1.008014   0.814957   0.6513249  1.1373316 ]\n",
+      " [0.         0.97600317 0.7389032  0.801871   1.1155392 ]\n",
+      " [0.         0.         1.0029664  0.10870896 0.731592  ]\n",
+      " [0.         0.         0.         0.24392581 0.12748216]\n",
+      " [0.         0.         0.         0.         0.09595132]]\n"
      ]
     }
    ],
@@ -167,19 +162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for naive NumPy QR decomposition: 1.0544276237487793\n",
-      "Time for TensorFrost QR decomposition: 0.16899871826171875\n",
-      "Time for built-in NumPy QR decomposition: 0.10702252388000488\n",
-      "Time for householder QR decomposition: 10.901634693145752\n",
-      "Error: 0.0001499538873179337\n",
-      "Error using TensorFrost: 0.00016575323\n"
+      "Time for naive NumPy QR decomposition: 1.103868007659912\n",
+      "Time for TensorFrost QR decomposition: 0.19100069999694824\n",
+      "Time for householder QR decomposition: 9.54797625541687\n",
+      "Time for built-in NumPy QR decomposition: 0.10799956321716309\n",
+      "Error: 0.00014818582\n",
+      "Error using TensorFrost: 0.00016608027\n"
      ]
     }
    ],
@@ -199,15 +194,15 @@
     "Qtf, Rtf = qr(Atf)\n",
     "print(\"Time for TensorFrost QR decomposition:\", time.time() - start)\n",
     "\n",
-    "#built-in NumPy QR decomposition\n",
-    "start = time.time()\n",
-    "Q, R = np.linalg.qr(A)\n",
-    "print(\"Time for built-in NumPy QR decomposition:\", time.time() - start)\n",
-    "\n",
     "#householder QR decomposition\n",
     "start = time.time()\n",
     "Q, R = qr_decomposition(A)\n",
     "print(\"Time for householder QR decomposition:\", time.time() - start)\n",
+    "\n",
+    "#built-in NumPy QR decomposition\n",
+    "start = time.time()\n",
+    "Q, R = np.linalg.qr(A)\n",
+    "print(\"Time for built-in NumPy QR decomposition:\", time.time() - start)\n",
     "\n",
     "print(\"Error:\", np.linalg.norm(A - np.dot(Q, R)))\n",
     "print(\"Error using TensorFrost:\", np.linalg.norm(A - np.dot(Qtf.numpy, Rtf.numpy)))"
