--- a/examples/buddhabrot.ipynb
+++ b/examples/buddhabrot.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "mandelbrot:\n",
       "  Kernel count: 3\n",
       "  Intermediate buffers: 1\n",
@@ -104,7 +105,15 @@
     "\n",
     "    return [canvas]\n",
     "\n",
-    "mand = tf.compile(mandelbrot)\n",
+    "mand = tf.compile(mandelbrot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "res = mand()\n",
     "resnp = res[0].numpy\n",
     "print(resnp.shape)"
