--- a/examples/sphere_tracer.ipynb
+++ b/examples/sphere_tracer.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "ray_marcher:\n",
       "  Kernel count: 2\n",
       "  Intermediate buffers: 0\n",
-      "  Lines of generated code: 878\n",
+      "  Lines of generated code: 868\n",
       "\n"
      ]
     }
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +319,7 @@
       "Frame 97 rendered\n",
       "Frame 98 rendered\n",
       "Frame 99 rendered\n",
-      "FPS: 36.78437691132906\n"
+      "FPS: 40.84993654791436\n"
      ]
     }
    ],
