--- a/examples/qr.ipynb
+++ b/examples/qr.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "QRDecomposition:\n",
       "  Kernel count: 8\n",
       "  Intermediate buffers: 0\n",
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -117,20 +118,20 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 1.785670116280193e-16\n",
-      "Error using TensorFrost: 1.266780835635349e-07\n",
+      "Error: 2.2890463418088597e-16\n",
+      "Error using TensorFrost: 1.1079049968100657e-07\n",
       "Q:\n",
-      " [[ 0.6291456   0.04937109 -0.08377443 -0.2941977   0.71285874]\n",
-      " [ 0.03656847  0.9155472   0.27512398 -0.24125023 -0.16291504]\n",
-      " [ 0.6825     -0.25869724  0.31876075 -0.11372456 -0.5939091 ]\n",
-      " [ 0.36553866  0.30338973 -0.58805984  0.6372609  -0.14973442]\n",
-      " [ 0.05842704  0.01914134  0.6854676   0.660463    0.30023775]]\n",
+      " [[ 0.04231869  0.7240883  -0.1944231   0.4811696   0.45230588]\n",
+      " [ 0.04542494  0.16168882  0.7123188   0.48781407 -0.47584942]\n",
+      " [ 0.18473203  0.09451526  0.65451086 -0.4388624   0.5796173 ]\n",
+      " [ 0.6026439   0.48707867 -0.1440797  -0.4334347  -0.43697852]\n",
+      " [ 0.7738476  -0.45097017 -0.07522098  0.3873594   0.20513466]]\n",
       "R:\n",
-      " [[ 1.3647071   1.2769631   1.2329394   0.37898797  1.0361224 ]\n",
-      " [ 0.          0.8078769   0.7217251   0.45250517  0.35288957]\n",
-      " [ 0.          0.          0.8550055   0.30730844 -0.06850314]\n",
-      " [ 0.          0.          0.          0.7125008   0.5267202 ]\n",
-      " [ 0.          0.          0.          0.          0.4836798 ]]\n"
+      " [[0.739292   0.9023142  0.6794356  0.8980583  0.73728895]\n",
+      " [0.         0.7301071  0.5396791  0.6316689  0.19520906]\n",
+      " [0.         0.         0.67682004 0.7367094  1.0479785 ]\n",
+      " [0.         0.         0.         0.5000831  0.3639637 ]\n",
+      " [0.         0.         0.         0.         0.48815954]]\n"
      ]
     }
    ],
@@ -162,19 +163,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for naive NumPy QR decomposition: 0.3222970962524414\n",
-      "Time for TensorFrost QR decomposition: 0.04967546463012695\n",
-      "Time for householder QR decomposition: 2.066986322402954\n",
-      "Time for built-in NumPy QR decomposition: 0.05078887939453125\n",
-      "Error: 9.301697e-05\n",
-      "Error using TensorFrost: 0.00010109904\n"
+      "Time for naive NumPy QR decomposition: 0.3596465587615967\n",
+      "Time for TensorFrost QR decomposition: 0.05354642868041992\n",
+      "Time for householder QR decomposition: 2.49704909324646\n",
+      "Time for built-in NumPy QR decomposition: 0.06352472305297852\n",
+      "Error: 9.28545e-05\n",
+      "Error using TensorFrost: 0.000101133475\n"
      ]
     }
    ],
