Some refactoring + add perf metrics

--- a/examples/bitonic.ipynb
+++ b/examples/bitonic.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "BitonicSort:\n",
       "  Kernel count: 2\n",
       "  Intermediate buffers: 0\n",
-      "  Lines of generated code: 406\n",
+      "  Lines of generated code: 394\n",
       "\n"
      ]
     }
@@ -24,6 +25,7 @@
     "\n",
     "tf.initialize(tf.cpu)\n",
     "\n",
+    "#this sort is not a stable sort, beware\n",
     "def BitonicSort():\n",
     "    input = tf.input([-1, 2], tf.int32) #key, value\n",
     "    N = input.shape[0]\n",
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
